 <PreferenceScreen
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:foo="http://schemas.android.com/apk/res/com.assignmentexpert"
      android:key="new_writing">
     
  			<com.customitems.IconPreference
	                        android:title="@string/preference_essay_type"
	                        android:summary="Not selected"
	                        android:key="typePref"
	                         />
        	<com.customitems.IconPreference
	                        android:title="@string/preference_number_pages"
	                        android:summary="Not selected"
	                        android:key="nmbPages"
	                         />
        	 <com.customitems.IconPreference
	                        android:title="@string/preference_cr_style"
	                        android:summary="Not selected"
	                        android:key="crStyle"
	                         />
            <com.customitems.IconPreference
	                        android:title="@string/preference_number_refs"
	                        android:summary="Not selected"
	                        android:key="nmbRefs"
	                         />
    
</PreferenceScreen>