<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:foo="http://schemas.android.com/apk/res/com.assignmentexpert"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" 
    android:focusableInTouchMode="true"
    android:focusable="true">
   
 <TableLayout 
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:stretchColumns="*">
          <TableRow
          android:id="@+id/tableRow1"
          style="@style/text_row" 
          android:layout_weight="1"
          >
   	<com.customitems.CustomTextView
   	    
        android:id="@+id/textViewPlus1"
        android:layout_width="fill_parent"
        style="@style/custom_textview"
         android:text="@string/textview_profile_promt"
        foo:customFont="Roboto-Medium.ttf">
    </com.customitems.CustomTextView>
		 </TableRow>
		 <TableRow android:layout_height="1px" android:background="#323232">
   	<TextView android:layout_span="1" android:layout_height="1px" 
             android:layout_width="fill_parent" android:text="">
  	 </TextView>
		</TableRow>
		  <TableRow
        android:id="@+id/tableRow2"
         android:layout_gravity="center_vertical"
       >
   	<com.customitems.CustomEditPreference
        android:id="@+id/loginPref"
        android:focusable="true"
        android:enabled="false"
           foo:alpha="100"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
        android:title="@string/textview_profile_login"
        foo:iconDisable="1"
        foo:customFont="Roboto-Regular.ttf"
       />
         </TableRow>
         	 <TableRow android:layout_height="1px" android:background="#323232">
			   	<TextView android:layout_span="1" android:layout_height="1px" 
			             android:layout_width="fill_parent" android:text="">
			  	 </TextView>
		    </TableRow>
		  <TableRow
         android:id="@+id/tableRow4"
           android:layout_gravity="center_vertical"
         style="@style/edit_row"
        >
	<com.customitems.CustomEditPreference
        android:id="@+id/firstNamePref"
        android:focusable="true"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
        android:title="@string/textview_profile_name"
        foo:iconDisable="1"
        foo:alpha="100"
        android:singleLine="true"
        android:imeOptions="actionNext"
        foo:customFont="Roboto-Regular.ttf"
       />
	    </TableRow>
	 <TableRow android:layout_height="1px" android:background="#323232">
   	<TextView android:layout_span="1" android:layout_height="1px" 
             android:layout_width="fill_parent" android:text="">
  	 </TextView>
		</TableRow>
       
 	<TableRow
        android:id="@+id/tableRow3"
        style="@style/button_row"
        >
       <com.customitems.CustomEditPreference
        android:id="@+id/countryPref"
        android:focusable="true"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         foo:alpha="100"
        android:title="Country"
        android:visibility="gone"
        foo:iconDisable="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        foo:customFont="Roboto-Regular.ttf"
       />
	    </TableRow>
		 <TableRow android:layout_height="1px" android:background="#323232">
   			<TextView android:layout_span="1" android:layout_height="1px" 
		             android:layout_width="fill_parent" android:text="">
		  	 </TextView>
		</TableRow>
		<TableRow
		     
        android:id="@+id/tableRow1"
        style="@style/text_row"
        >
  			 <com.customitems.CustomEditPreference
        android:id="@+id/phonePref"
        android:focusable="true"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
        android:title="@string/textview_profile_phone"
        foo:iconDisable="1"
        foo:alpha="100"
        android:singleLine="true"
        android:imeOptions="actionNext"
        foo:customFont="Roboto-Regular.ttf"
       />
		</TableRow>
		  <TableRow android:layout_height="1px" android:background="#323232">
			   	<TextView android:layout_span="1" android:layout_height="1px" 
			             android:layout_width="fill_parent" android:text="">
			  	 </TextView>
		    </TableRow>
		  <TableRow
         android:id="@+id/tableRow2"
           android:layout_gravity="center_vertical"
         style="@style/edit_row"
        >
	<com.customitems.CustomEditPreference
        android:id="@+id/timezonePref"
        android:focusable="true"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
        android:title="Time zone"
        foo:iconDisable="1"
        android:visibility="gone"
        android:singleLine="true"
        foo:alpha="100"
        android:imeOptions="actionNext"
        foo:customFont="Roboto-Regular.ttf"
       />
	    </TableRow>
	     <TableRow android:layout_height="1px" android:background="#323232">
			   	<TextView android:layout_span="1" android:layout_height="1px" 
			             android:layout_width="fill_parent" android:text="">
			  	 </TextView>
		    </TableRow>
		  <TableRow
         android:id="@+id/tableRow2"
           android:layout_gravity="center_vertical"
         style="@style/edit_row"
        >
	<com.customitems.CustomEditPreference
        android:id="@+id/passwordPref"
        android:focusable="true"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
        android:title="@string/textview_profile_password"
        foo:alpha="100"
        foo:iconDisable="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        foo:customFont="Roboto-Regular.ttf"
       />
	    </TableRow>
	    <TableRow android:layout_height="1px" android:background="#323232">
			   	<TextView android:layout_span="1" android:layout_height="1px" 
			             android:layout_width="fill_parent" android:text="">
			  	 </TextView>
		    </TableRow>
		  <TableRow
         android:id="@+id/tableRow2"
           android:layout_gravity="center_vertical"
         style="@style/edit_row"
        >
	 <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
                 
	      <com.customitems.CustomTextView
	               android:id="@+android:id/title"
	     		   style="@style/custom_edittext"
	     		   android:textColor="#7D7D7D"
	     		   android:layout_width="fill_parent"
	     		   android:textSize="18sp"
	     		  android:text="@string/textview_profile_sign_me"
	              foo:customFont="Roboto-Medium.ttf"/>
	      <CheckBox
	          android:id="@+id/signMeCheck"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentRight="true"
	          android:layout_centerVertical="true"
			  android:clickable="false"
	          android:layout_marginRight="27dp"
	          android:gravity="left"
	          android:textSize="20sp" />
      </RelativeLayout>
      </TableRow>
	     <TableRow android:layout_height="1px" android:background="#323232">
			   	<TextView android:layout_span="1" android:layout_height="1px" 
			             android:layout_width="fill_parent" android:text="">
			  	 </TextView>
		    </TableRow>
		  <TableRow
         android:id="@+id/tableRow5"
           android:layout_gravity="center_vertical"
         style="@style/edit_row"
        >
		  <Button 
			android:text="@string/btn_edit_profile"
        	style="@style/custom_button"
        	android:id="@+id/profileEdit"
        	android:background="@drawable/gray_button"
            android:layout_width="fill_parent"
            android:layout_height="39dp" />
		  </TableRow>
	</TableLayout>
</ScrollView>
